Updated compose for Linkwarden

--- a/Linkwarden/compose.yml
+++ b/Linkwarden/compose.yml
@@ -13,7 +13,6 @@ services:
     env_file:
       - .env
     volumes:
-      - /elysium/linkwarden-data:/data/data:Z
       - /elysium/linkwarden-cache:/data/.next/cache:Z
     restart: always
     labels:
@@ -30,7 +29,7 @@ services:
     cap_drop:
       - ALL
     tmpfs:
-      - /tmp:noexec,nosuid,nodev
+      - /data/data:mode=777,noexec,nosuid,nodev
 
   postgres:
     container_name: lw-postgres
