Removing /var/lib/apt/lists/ too

--- a/Archiveteam/Dockerfile
+++ b/Archiveteam/Dockerfile
@@ -3,7 +3,7 @@ ARG UID=200014
 USER root
 RUN apt-get update \
 	&& apt-get upgrade -y && apt-get dist-upgrade -y \
-	&& rm -rf /var/cache/apt/*
+	&& rm -rf /var/cache/apt/* /var/lib/apt/lists/*
 RUN pip install --no-cache-dir --upgrade --upgrade-strategy eager -r /tmp/requirements.txt
 RUN --network=none usermod -u ${UID} warrior && groupmod -g ${UID} warrior \
 	&& find / -path /proc -prune -o -user 1000 -exec chown warrior {} + && find / -path /proc -prune -o -group 1000 -exec chgrp warrior {} +
