Updated Headwind versions

--- a/Headwind/Dockerfile
+++ b/Headwind/Dockerfile
@@ -1,7 +1,7 @@
 FROM docker.io/library/tomcat:9-jre11-temurin-jammy
 ARG UID=200004
-ENV HMDM_URL=https://h-mdm.com/files/hmdm-5.32.1-os.war
-ENV CLIENT_VERSION=6.16
+ENV HMDM_URL=https://h-mdm.com/files/hmdm-5.33.1-os.war
+ENV CLIENT_VERSION=6.18
 ENV PROTOCOL=https
 ENV INSTALL_LANGUAGE=en
 ENV SHARED_SECRET=changeme-C3z9vi54
@@ -13,9 +13,7 @@ RUN apt-get update && apt-get upgrade -y && apt-get dist-upgrade -y \
 	&& apt-get install aapt wget sed postgresql-client -y \
 	&& rm -rf /var/cache/apt/* /var/lib/apt/lists/*
 
-RUN --network=none mkdir -p /usr/local/tomcat/conf/Catalina/localhost \
-	&& mkdir -p /usr/local/tomcat/ssl \
-	&& chown --recursive ${UID}:${UID} /usr/local/tomcat/work /usr/local/tomcat/logs /usr/local/tomcat/webapps /usr/local/tomcat/conf/Catalina/localhost /usr/local/tomcat/temp \
+RUN --network=none mkdir -p /usr/local/tomcat/conf/Catalina/localhost /usr/local/tomcat/ssl \
 	&& sed -i "s|securerandom.source=file:/dev/random|securerandom.source=file:/dev/urandom|g" /opt/java/openjdk/conf/security/java.security \
 	&& addgroup --gid ${UID} --system hmdm && adduser --ingroup hmdm --uid ${UID} --disabled-password --no-create-home --shell /usr/sbin/nologin --system hmdm
 
