--- a/Attestation/Dockerfile
+++ b/Attestation/Dockerfile
@@ -17,7 +17,7 @@ RUN sed -i 's/::1/0.0.0.0/g' src/main/java/app/attestation/server/AttestationSer
 	&& sed -i 's/app\.attestation\.auditor/app\.selfhosted\.auditor/g' src/main/java/app/attestation/server/AttestationProtocol.java \
 	&& sed -i 's/"attestation.app"/System.getenv("DOMAIN") != null ? System.getenv("DOMAIN") : "attestation.app"/g' src/main/java/app/attestation/server/AttestationServer.java \
 	&& sed -i 's/"990E04F0864B19F14F84E0E432F7A393F297AB105A22C1E1B10B442A4A62C42C"/System.getenv("CERTIFICATE") != null ? System.getenv("CERTIFICATE") : "990E04F0864B19F14F84E0E432F7A393F297AB105A22C1E1B10B442A4A62C42C"/g' src/main/java/app/attestation/server/AttestationProtocol.java
-RUN ./gradlew build
+RUN ./gradlew build && rm -f build/libs/*.so
 RUN npm i && python3 -m venv /opt/venv && pip3 install --no-cache-dir -r requirements.txt && ./process-static
 
 RUN $JAVA_HOME/bin/jlink --add-modules java.base,java.compiler,java.desktop,java.logging,java.naming,java.security.sasl,java.sql,java.xml,jdk.httpserver,jdk.unsupported,jdk.crypto.ec,jdk.crypto.cryptoki,jdk.security.auth \
@@ -46,8 +46,8 @@ COPY --chmod=644 ./nginx.conf /etc/nginx/nginx.conf
 COPY --from=docker.io/nginxinc/nginx-unprivileged:stable-alpine-slim /etc/nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf
 COPY --from=docker.io/nginxinc/nginx-unprivileged:stable-alpine-slim /docker-entrypoint.d /docker-entrypoint.d
 COPY --from=docker.io/nginxinc/nginx-unprivileged:stable-alpine-slim /docker-entrypoint.sh /docker-entrypoint.sh
-COPY --from=0 /app/build/libs/*.jar /app
-COPY --from=0 /tmp/sqlite4java/out/linux-* /usr/lib
+COPY --from=0 /app/build/libs /app
+COPY --from=0 /tmp/sqlite4java/out/linux-*/libsqlite4java-*.so /usr/lib
 COPY --from=0 /javaruntime $JAVA_HOME
 RUN --network=none printf '#!/bin/sh\n/opt/java/openjdk/bin/java -jar /app/attestation-server.jar &' > /docker-entrypoint.d/99-attestation.sh \
 	&& chmod +x /docker-entrypoint.d/99-attestation.sh
