Updated multiple Dockerfiles

--- a/Archiveteam/Dockerfile
+++ b/Archiveteam/Dockerfile
@@ -9,4 +9,4 @@ RUN --network=none usermod -u ${UID} warrior && groupmod -g ${UID} warrior \
 	&& find / -path /proc -prune -o -user 1000 -exec chown warrior {} + && find / -path /proc -prune -o -group 1000 -exec chgrp warrior {} +
 RUN --network=none find /usr -type f -perm /4000 -exec chmod u-s {} \; && find /usr -type f -perm /2000 -exec chmod g-s {} \; \
 	&& rm -f /usr/bin/chsh /usr/bin/pkexec /usr/bin/sudo /usr/bin/su
-USER ${UID}
+USER warrior
