--- a/F-Droid/Dockerfile
+++ b/F-Droid/Dockerfile
@@ -21,4 +21,4 @@ RUN --network=none usermod -u ${UID} nginx && groupmod -g ${UID} nginx \
 	&& find / -path /proc -prune -o -user 101 -exec chown nginx {} + && find / -path /proc -prune -o -group 101 -exec chgrp nginx {} +
 RUN --network=none find /usr -type f -perm /4000 -exec chmod u-s {} \; && find /usr -type f -perm /2000 -exec chmod g-s {} \; \
 	&& rm -f /usr/bin/chsh /usr/bin/pkexec /usr/bin/sudo /usr/bin/su
-USER ${UID}
+USER nginx
