--- a/Nitter/Dockerfile
+++ b/Nitter/Dockerfile
@@ -15,10 +15,11 @@ RUN apk --no-cache add pcre ca-certificates openssl
 RUN pip install --no-cache-dir pyotp requests
 RUN --network=none addgroup -g ${UID} --system nitter && adduser -u ${UID} --ingroup nitter --disabled-password -s /sbin/nologin -H --system nitter
 
-USER ${UID}
 COPY --from=0 /src/nitter /app/nitter
 COPY --from=0 /src/public /app/public
 COPY --from=0 /src/tools/get_session.py /app/get_session.py
 COPY --chmod=644 ./nitter.conf.example /app/nitter.conf
+
+USER nitter
 EXPOSE 8080
 CMD ["/app/nitter"]
