--- a/Traccar/Dockerfile
+++ b/Traccar/Dockerfile
@@ -6,7 +6,7 @@ ENV CONFIG_USE_ENVIRONMENT_VARIABLES=true
 ENV PATH="${JAVA_HOME}/bin:${PATH}"
 ENV DATABASE_DRIVER="org.postgresql.Driver"
 ENV DATABASE_URL="jdbc:postgresql://traccar_postgresql/postgres"
-ENV POSTGRES_USER="traccar-admin"
+ENV DATABASE_USER="traccar-admin"
 WORKDIR /app
 COPY --from=docker.io/library/eclipse-temurin:17-jre $JAVA_HOME $JAVA_HOME
 COPY --from=0 /opt/traccar /app
