--- a/ebook2audiobookpiper/Dockerfile
+++ b/ebook2audiobookpiper/Dockerfile
@@ -1,10 +1,10 @@
 FROM registry.fedoraproject.org/fedora:latest
 ARG UID=200011
-ENV PYTHONUNBUFFERED=1
-ENV GRADIO_SHARE="False"
-ENV GRADIO_ANALYTICS_ENABLED="False"
-ENV GRADIO_SERVER_NAME=0.0.0.0
-ENV GRADIO_SERVER_PORT=8080
+ENV PYTHONUNBUFFERED=1 \
+	GRADIO_SHARE="False" \
+	GRADIO_ANALYTICS_ENABLED="False" \
+	GRADIO_SERVER_NAME=0.0.0.0 \
+	GRADIO_SERVER_PORT=8080
 RUN sed -i -e s,countme=1,countme=0, /etc/yum.repos.d/*.repo \
 	&& dnf install -y --setopt=install_weak_deps=False calibre ffmpeg git python3.10 which \
 	&& dnf clean all -y
