Fixed Dockerfile for Traccar

--- a/Traccar/Dockerfile
+++ b/Traccar/Dockerfile
@@ -1,6 +1,6 @@
 FROM docker.io/library/alpine:latest
-ARG VERSION=6.6 \
-	UID=200018
+ARG VERSION=6.6
+ARG UID=200018
 ENV CONFIG_USE_ENVIRONMENT_VARIABLES=true \
 	DATABASE_DRIVER="org.postgresql.Driver" \
 	DATABASE_URL="jdbc:postgresql://traccar_postgresql/postgres" \
