--- a/Miniflux/compose.yml
+++ b/Miniflux/compose.yml
@@ -7,6 +7,11 @@ services:
       - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@miniflux-postgres/${POSTGRES_USER}?sslmode=disable
       - RUN_MIGRATIONS=1
       - CREATE_ADMIN=1
+      - CLEANUP_ARCHIVE_READ_DAYS=730
+      - POLLING_FREQUENCY=1
+      - SCHEDULER_ROUND_ROBIN_MIN_INTERVAL=20
+      - SCHEDULER_ROUND_ROBIN_MAX_INTERVAL=60
+      - BATCH_SIZE=5
       - ADMIN_USERNAME=${ADMIN_USERNAME}
       - ADMIN_PASSWORD=${ADMIN_PASSWORD}
     user: "200019:200019"
