--- a/Nitter/Dockerfile
+++ b/Nitter/Dockerfile
@@ -1,23 +1,24 @@
 FROM docker.io/nimlang/nim:2.2.0-alpine-regular
 WORKDIR /src/
-ADD --keep-git-dir=true https://github.com/zedeus/nitter.git#master .
-RUN apk --no-cache add libsass-dev pcre
+RUN apk --no-cache add libsass-dev pcre git
+
+RUN git init . && git remote add origin https://github.com/IruzzArcana/nitter.git \
+	&& git fetch --depth 1 origin 948504dfc0fe8cb5e277da3d630c951e48bfe1e1 \
+	&& git checkout FETCH_HEAD
 RUN nimble install -y --depsOnly \
 	&& nimble build -d:danger -d:lto -d:strip --mm:refc \
 	&& nimble scss \
 	&& nimble md
 
-FROM docker.io/library/python:3-alpine
+FROM docker.io/library/alpine:latest
 ARG UID=200013
 ENV NITTER_SESSIONS_FILE=/data/sessions.jsonl
 WORKDIR /app
 RUN apk --no-cache add pcre ca-certificates openssl
-RUN pip install --no-cache-dir pyotp requests cloudscraper
 RUN --network=none addgroup -g ${UID} --system nitter && adduser -u ${UID} --ingroup nitter --disabled-password -s /sbin/nologin -H --system nitter
 
 COPY --from=0 /src/nitter /app/nitter
 COPY --from=0 /src/public /app/public
-COPY --from=0 /src/tools/get_session.py /app/get_session.py
 COPY --chmod=644 ./nitter.conf.example /app/nitter.conf
 
 USER nitter
