--- a/Caddy/Caddyfile
+++ b/Caddy/Caddyfile
@@ -55,6 +55,7 @@
 	@lan {
 		remote_ip 192.168.0.0/24
 		remote_ip 192.168.1.0/24
+		remote_ip 192.168.4.0/24
 		remote_ip 100.64.0.0/10
 		remote_ip 127.0.0.0/8
 		remote_ip 10.0.0.0/8
