Updated compose for miniflux

--- a/Miniflux/compose.yml
+++ b/Miniflux/compose.yml
@@ -12,6 +12,7 @@ services:
       - SCHEDULER_ROUND_ROBIN_MIN_INTERVAL=20
       - SCHEDULER_ROUND_ROBIN_MAX_INTERVAL=60
       - BATCH_SIZE=5
+      - POLLING_PARSING_ERROR_LIMIT=10
       - ADMIN_USERNAME=${ADMIN_USERNAME}
       - ADMIN_PASSWORD=${ADMIN_PASSWORD}
     user: "200019:200019"
