Updated Dockerfile for Linkwarden

--- a/Linkwarden/Dockerfile
+++ b/Linkwarden/Dockerfile
@@ -10,5 +10,5 @@ RUN apt-get update \
 RUN --network=none usermod -u ${UID} node && groupmod -g ${UID} node \
 	&& find / -path /proc -prune -o -user 1000 -exec chown node {} + && find / -path /proc -prune -o -group 1000 -exec chgrp node {} +
 RUN --network=none find /usr -type f -perm /4000 -exec chmod u-s {} \; && find /usr -type f -perm /2000 -exec chmod g-s {} \; \
-	&& rm -f /usr/bin/chsh /usr/bin/pkexec /usr/bin/sudo /bin/su
+	&& rm -f /usr/bin/chsh /usr/bin/pkexec /usr/bin/sudo /bin/su && chmod 755 /root && ln -sf /root/.cache/ /home/node/
 USER node
